# wwm_translator

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
docs/: index.html
docs/data/: stats.json
rules/: game_context.md  translation_rules.md
src/: __init__.py  batch_processor.py  config.py  extractor.py  hashmap_format.py  issue_fixer.py  llm_client.py  models.py  tokenizer.py  utils.py
